2005-06-28  Raja R Harinath  <rharinath@novell.com>

	* Makefile.am (FILES): Move AssemblyInfo.cs ...
	(GENERATED_FILES): ... here.

2005-04-17  John Luke  <john.luke@gmail.com>

	* Makefile.am: fix distcheck

2005-04-01	Christian Hergert	<christian.hergert@gmail.com>

	* Makefile.am: fix call to app.config

2005-04-01	Christian Hergert	<christian.hergert@gmail.com>

	* app.config: Add MonoDevelop.exe.config configuration file
	* Makefile.am: Update to include the configuration file

2005-03-10	Christian Hergert	<christian.hergert@gmail.com>

	* MonoDevelopMain.cs: Update the splash screen percentages
	and status messages.

2005-01-27  John Luke  <john.luke@gmail.com>

	* MonoDevelopMain.cs: remove unused code that
	caused warnings

2005-01-14  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelopMain.cs: Use new api for checking for combine files.

2004-12-03  John Luke  <john.luke@gmail.com>

	* Dialogs/ExceptionDialog.cs: remove obsolete gtype stuff
	* MonoDevelopMain.cs: comment out unused code
	* Makefile.am: remove ExceptionDialog from build

2004-09-18  Todd Berman  <tberman@off.net>

	* MonoDevelopMain.cs: Check if Build and Revision are not 0, and if
	so, use them as well when building the version #.

2004-08-07  Todd Berman  <tberman@off.net>

	* AssemblyInfo.cs.in: Use new ASSEMBLY_VERSION variable.

2004-07-01  John Luke  <jluke@cfl.rr.com>

	* MonoDevelopMain.cs: return 1 on error and 0 otherwise
	* MonoDevelopOptions.cs: remove unneeded -f option
	implement reusing MD instance only when we are getting passed
	arguments (like files). This allows more than one MD to be run
	at a time, and adding files from nautilus still works.  Less
	than perfect, but better than what it was

2004-07-01  John Luke  <jluke@cfl.rr.com>

	* MonoDevelopMain.cs: implement nologo
	* MonoDevelopOptions.cs: add -f and --nologo args

2004-07-01  John Luke  <jluke@cfl.rr.com>

	* AssemblyInfo.cs.in: clean up and add some informaition used below