@@ -1,3 +1,11 @@
+2005-07-18  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* MonoDevelopMain.cs: Show an error dialog if there is some error
+	while initializing the addins.
+	* Dialog/AggregatedProgressMonitor.cs: New dialog for showing addin
+	load errors.
+	* Makefile.am: Added glade file.
+
 2005-06-28  Raja R Harinath  <rharinath@novell.com>
 
 	* Makefile.am (FILES): Move AssemblyInfo.cs ...
